# ev-battery-monitor

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
config/: defaults.yaml
docs/: blueprint.md  technical-spec.md
packaging/: README.md  docker-compose.yml
src/ev_battery_monitor/: __init__.py  exceptions.py  main.py
src/ev_battery_monitor/cli/: cli.py
src/ev_battery_monitor/config/: config.py  config_loader.py
src/ev_battery_monitor/domain/: battery.py  charger.py  charging_session.py  vehicle.py
src/ev_battery_monitor/metrics/: metrics.py
src/ev_battery_monitor/session_logging/: __init__.py  session_logger.py
src/ev_battery_monitor/simulation/: engine.py  state.py
tests/: conftest.py
tests/integration/: test_cli_flow.py
tests/unit/: test_battery.py  test_charger.py  test_charging_session.py  test_cli_console.py  test_config.py  test_engine.py  test_metrics.py  test_session_logger.py  test_vehicle.py
